Fixed whitespace of site edges

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@
   color utility to any element that depends on these defaults.
 */
 @layer base {
+  html, body {
+    background-color: #0f0f23;
+  }
+
   *,
   ::after,
   ::before,
